# tesco_meal

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 4d3cb47aca4f_.py  561bdceb1936_.py
src/: main.py  prompts.py
src/Bot/: bot.py
src/config/: settings.py
src/db/: db.py  models.py
src/exceptions/: exceptions.py
src/handlers/: __init__.py  handlers.py  menu.py
src/integrations/: bot.py  gpt.py  serp_api.py
src/keyboards/: keyboards.py
src/schemas/: serp.py
src/services/: full_product_search.py  gpt_service.py  serp_api_search.py  serp_service.py
