[project]
name = "tesco-meal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.22.0",
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.123.4",
    "google-search-results>=2.4.2",
    "httpx>=0.28.1",
    "openai>=2.9.0",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.38.0",
]
